# vcpkg-http-binary-cache

./: Cargo.toml
src/: main.rs
