[package]
name = "vcpkg-http-binary-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.12"
clap = { version = "4.2.1", features = ["derive"] }
futures = "0.3.28"
human_bytes = "0.4.1"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tokio-util = { version = "0.7.7", features = ["io"] }
tower-http = { version = "0.4.0", features = ["tracing", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
